# EventStreamGPT

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  env.yml  env_cpu.yml  eq_loader.py  pyproject.toml  setup.py
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  python-package-conda.yml  tests.yml
EventStream/: logger.py  utils.py
EventStream/EventStreamData/: README.md  config.py  data_embedding_layer.py  event_stream_dataset.py  event_stream_dataset_base.py  event_stream_dataset_polars.py  event_stream_pytorch_cached_dataset.py  event_stream_pytorch_dataset.py  expandable_df_dict.py  time_dependent_functor.py  types.py  visualize.py  vocabulary.py
EventStream/EventStreamTransformer/: config.py  generation_outputs_process.py  generation_stopping_criteria.py  generation_utils.py  generative_layers.py  generative_sequence_modelling_lightning.py  get_embeddings_lightning.py  model.py  model_output.py  stream_classification_lightning.py  structured_attention.py  transformer.py  utils.py
EventStream/Preprocessing/: README.md  standard_scaler.py  variance_impact_outlier_detector.py
EventStream/VarianceImpactOutlierDetector/: README.md  variance_impact_outlier_detector.py
EventStream/baseline/: FT_task_baseline.py
EventStream/data/: README.md  config.py  data_embedding_layer.py  dataset_base.py  dataset_polars.py  pytorch_dataset.py  time_dependent_functor.py  types.py  visualize.py  vocabulary.py
EventStream/evaluation/: FT_task_baseline.py  MCF_evaluation.py  general_generative_evaluation.py  wandb_sklearn.py
EventStream/tasks/: profile.py
EventStream/transformer/: README.md  conditionally_independent_model.py  config.py  fine_tuning_model.py  generation_outputs_process.py  generation_stopping_criteria.py  generation_utils.py  generative_layers.py  generative_model_base.py  generative_sequence_modelling_lightning.py  get_embeddings_lightning.py  model.py  model_output.py  nested_attention_model.py  stable_distribution_losses.py  stream_classification_lightning.py  structured_attention.py  transformer.py  utils.py  zero_shot_labeler.py  zero_shot_utils.py
configs/: README.md  dataset_base.yaml  finetuning_hyperparameter_sweep_base.yaml  from_scratch_supervised_hyperparameter_sweep_base.yaml  hyperparameter_sweep.yaml  pretrain_subsets_base.yaml  pretraining_hyperparameter_sweep_base.yaml  sklearn_baseline_hyperparameter_sweep_base.yaml
configs/normalizer_config/: standard_scaler.yaml
configs/outlier_detector_config/: stddev_cutoff.yaml
configs/parameters/: default.yaml  finetuning.yaml  from_scratch_supervised.yaml  pretraining.yaml  sklearn_baseline.yaml
configs/pretrain_config/: default.yaml
configs/sklearn_models/: sklearn_baseline_hyperparameter_sweep_base.yaml
docs/: api_refs.bib  conf.py  index.md  license.md  overview.md  usage.md
docs/MIMIC_IV_tutorial/: data_extraction_processing.md  data_model.md  dataset_config.yml  dataset_description.txt  dataset_usage.md  evaluation.md  hyperparameter_sweep.yml  in_hosp_mort_labeler.py  index.md  mortality_stats.txt  pre_training.md  problem_setup.md  readmission_risk_stats.py  readmission_risk_stats.txt  refs.bib
docs/local_tutorial/: index.md
sample_data/: Examine Synthetic Dataset.ipynb  Generate Synthetic Data.ipynb  UniHPF Style Linearization Example.ipynb  UniHPF_Style_Example.ipynb  build_sample_task_DF.py  dataset.yaml  dataset_parquet.yaml  dataset_unihpf.yaml  examine_synthetic_data.ipynb  flat_representations.ipynb  from_scratch.yaml  generate_synthetic_data.ipynb  generate_synthetic_data.py  pretrain_CI.yaml  pretrain_NA.yaml  sample_classification_labeler.py
sample_data/raw/: admit_vitals.csv  medications.csv  subjects.csv
sample_data/raw_parquet/: admit_vitals.parquet  labs.parquet  medications.parquet  subjects.parquet
scripts/: README.md  build_dataset.py  build_flat_reps.py  convert_to_ESDS.py  downstream_task_baselines.py  finetune.py  generate_trajectories.py  get_embeddings.py  launch_finetuning_wandb_hp_sweep.py  launch_from_scratch_supervised_wandb_hp_sweep.py  launch_pretraining_wandb_hp_sweep.py  launch_sklearn_baseline_supervised_wandb_hp_sweep.py  launch_wandb_hp_sweep.py  prepare_pretrain_subsets.py  pretrain.py  sklearn_baseline.py  zeroshot.py
scripts/pre_training/: pretrain.py  wandb_hp_sweep.yaml
tests/: mixins.py  test_e2e_runs.py  test_utils.py  utils.py
tests/EventStreamData/: test_config.py  test_data_embedding_layer.py  test_event_stream_dataset.py  test_event_stream_dataset_base.py  test_event_stream_dataset_polars.py  test_event_stream_pytorch_dataset.py  test_expandable_df_dict.py  test_vocabulary.py
tests/EventStreamTransformer/: test_config.py  test_generative_layers.py  test_generative_sequence_model_lightning.py  test_model.py  test_transformer.py  test_utils.py
tests/Preprocessing/: test_standard_scaler.py  test_stddev_cutoff.py  test_variance_impact_outlier_detector.py
tests/VarianceImpactOutlierDetector/: test_variance_impact_outlier_detector.py
tests/data/: test_config.py  test_data_embedding_layer.py  (+9 more)
(+89 files in other folders)
