[tool.poetry]
name = "ESGPT"
version = "0.0.1"
description = "Event Stream GPT is a library for data pre-processing, representation, and modeling for generative pre-trained transformer models for \"event stream\" datasets, which consist of discrete sequences of continuous-time events with internal covariates of either categorical or categorical key and numerical value pairs with non-trivial intra-event dependencies."
authors = ["Matthew McDermott <mattmcdermott8@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mmcdermott/EventStreamGPT"
documentation = "https://eventstreamml.readthedocs.io/en/latest/"
repository = "https://github.com/mmcdermott/EventStreamGPT.git"
keywords = [
  "machine learning", "ML", "artificial intelligence", "AI", "event stream data", "EHR data",
  "Electronic Health Record", "foundation models", "GPT"
]
packages = [
  { include = "EventStream" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
polars = "^0.18.15"
plotly = "^5.16.1"
ml-mixins = "^0.0.5"
humanize = "^4.8.0"
hydra-core = "^1.3.2"
inflect = "^7.0.0"
pandas = "^2.0.3"
tqdm = "^4.66.1"
lightning = "^2.0.7"
sparklines = "^0.4.2"
pytorch-lognormal-mixture = "^0.0.1"
pyarrow = "^12.0.1"
torchmetrics = "^1.0.3"
dill = "^0.3.7"
kaleido = "0.2.1"
transformers = "^4.31.0"
wandb = "^0.15.8"
scipy = "^1.11.2"
scikit-learn = "^1.3.0"

[tool.poetry.group.test.dependencies]
pexpect = "^4.8.0"
pytest = "^7.4.0"
pytest-cov = {extras = ["toml"], version = "^4.1.0"}
nbmake = "^1.4.3"
rootutils = "^1.0.7"

[tool.poetry.group.docs.dependencies]
sphinxcontrib-bibtex = "^2.5.0"
sphinx = "^7.1.2"
sphinx-collections = "^0.0.1"
sphinx-subfigure = "^0.2.4"
myst-parser = "^2.0.0"
nbsphinx = "^0.9.2"
sphinx-material = "^0.0.35"
linkify-it-py = "^2.0.2"
pypandoc = "^1.11"
pexpect = "^4.8.0"

[tool.poetry.group.cpu.dependencies]
torch = { version = "^2.0.1", source="pytorch-cpu-src" }

[tool.poetry.group.cu118.dependencies]
torch = { version = "^2.0.1", source="pytorch-cu118-src" }


[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cu118-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
