[tool.poetry]
name = "ESGPT"
version = "0.0.1"
description = "Event Stream GPT is a library for data pre-processing, representation, and modeling for generative pre-trained transformer models for \"event stream\" datasets, which consist of discrete sequences of continuous-time events with internal covariates of either categorical or categorical key and numerical value pairs with non-trivial intra-event dependencies."
authors = ["Matthew McDermott <mattmcdermott8@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mmcdermott/EventStreamGPT"
documentation = "https://eventstreamml.readthedocs.io/en/latest/"
repository = "https://github.com/mmcdermott/EventStreamGPT.git"
keywords = [
  "machine learning", "ML", "artificial intelligence", "AI", "event stream data", "EHR data",
  "Electronic Health Record", "foundation models", "GPT"
]
packages = [
  { include = "EventStream" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
polars = "^0.19.19"
plotly = "^5.16.1"
ml-mixins = "^0.0.5"
humanize = "^4.8.0"
hydra-core = "^1.3.2"
inflect = "^7.0.0"
pandas = "^2.0.3"
tqdm = "^4.66.1"
lightning = "^2.0.7"
sparklines = "^0.4.2"
pytorch-lognormal-mixture = "^0.0.1"
pyarrow = "^12.0.1"
torchmetrics = "^1.0.3"
dill = "^0.3.7"
kaleido = "0.2.1"
datasets = "^2.14.4"
transformers = "^4.31.0"
wandb = "^0.15.8"
scipy = "^1.11.2"
scikit-learn = "^1.3.0"
rootutils = "^1.0.7"
loguru = "^0.7.2"

# Test dependencies
pexpect = { version="^4.8.0", optional=true }
pytest = { version="^7.4.0", optional=true }
pytest-cov = {extras = ["toml"], version = "^4.1.0", optional=true}
nbmake = { version="^1.4.3", optional=true }
pre-commit = { version="^3.3.3", optional=true}
pytest-subtests = { version="^0.11.0", optional=true}

# Docs dependencies
sphinxcontrib-bibtex = { version = "^2.5.0", optional = true }
sphinx = { version = "^7.1.2", optional = true }
sphinx-collections = { version = "^0.0.1", optional = true }
sphinx-subfigure = { version = "^0.2.4", optional = true }
myst-parser = { version = "^2.0.0", optional = true }
nbsphinx = { version = "^0.9.2", optional = true }
sphinx-immaterial = { version = "^0.11.7", optional = true }
linkify-it-py = { version = "^2.0.2", optional = true }
pypandoc = { version = "^1.11", optional = true }

[tool.poetry.extras]
tests = ["pexpect", "pytest", "pytest-cov", "nbmake", "pre-commit", "pytest-subtests"]
docs = [
  "sphinxcontrib-bibtex", "sphinx", "sphinx-collections", "sphinx-subfigure", "myst-parser", "nbsphinx",
  "linkify-it-py", "pypandoc", "sphinx-immaterial", "pexpect"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
